--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./assets/css/animate.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="https://ryota-ur.github.io/sample-corp/css/style.css">
+    <link rel="stylesheet" href="https://ryota-ur.github.io/sample-corp/style.css">
 </head>
 
 <body>
