--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sample.corp</title>
 
 
-    <link rel="stylesheet" href="https://ryota-ur.github.io/sample-corp/css/reset.css">
+    <link rel="stylesheet" href="https://ryota-ur.github.io/sample-corp/reset.css">
     <link rel="stylesheet" href="./assets/css/animate.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -430,7 +430,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="./js/wow.min.js"></script>
-    <script src="https://ryota-ur.github.io/sample-corp/js/script.js"></script>
+    <script src="https://ryota-ur.github.io/sample-corp/script.js"></script>
 
 </body>
 
