--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
     </footer><!-- /footer -->
 
     <div class="page-top">
-        <a href="#"></a>
+        <a href="#"><img src="./img/totop@2x.png" alt=""></a>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
